fix router naming for consistency
