# tool/backend/src/routers/rti_status_router.py
@@ -12,7 +12,7 @@ router = APIRouter(prefix="/api/v1", tags=["RTI Statuses"])
 def get_rti_status_service(session: SessionDep):
     return RTIStatusService(session)
 
-@router.post("/rti-status", response_model=RTIStatusResponse)
+@router.post("/rti_statuses", response_model=RTIStatusResponse)
 def create_rti_status_endpoint(
     rti_status_request: RTIStatusRequest,
     service: RTIStatusService = Depends(get_rti_status_service),
@@ -20,7 +20,7 @@ def create_rti_status_endpoint(
 ):
     return service.create_rti_status(rti_status_request=rti_status_request)
 
-@router.get("/rti-status", response_model=RTIStatusListResponse)
+@router.get("/rti_statuses", response_model=RTIStatusListResponse)
 def get_rti_status_list_endpoint(
     page: int = Query(1, ge=1, description="page number"),
     page_size: int = Query(10, ge=1, le=100, description="page size"),
@@ -29,7 +29,7 @@ def get_rti_status_list_endpoint(
 ):
     return service.get_rti_status_list(page=page, page_size=page_size)
 
-@router.get("/rti-status/{rti_status_id}", response_model=RTIStatusResponse)
+@router.get("/rti_statuses/{rti_status_id}", response_model=RTIStatusResponse)
 def get_rti_status_by_id_endpoint(
     rti_status_id: Annotated[UUID, Path(title="ID of the RTI status")],
     service: RTIStatusService = Depends(get_rti_status_service),
@@ -37,7 +37,7 @@ def get_rti_status_by_id_endpoint(
 ):
     return service.get_rti_status_by_id(rti_status_id=rti_status_id)
 
-@router.put("/rti-status/{rti_status_id}", response_model=RTIStatusResponse)
+@router.put("/rti_statuses/{rti_status_id}", response_model=RTIStatusResponse)
 def update_rti_status_put_endpoint(
     rti_status_id: Annotated[UUID, Path(title="ID of the RTI status")],
     rti_status_request: RTIStatusRequest,
@@ -46,7 +46,7 @@ def update_rti_status_put_endpoint(
 ):
     return service.update_rti_status_put(rti_status_id=rti_status_id, rti_status_request=rti_status_request)
 
-@router.delete("/rti-status/{rti_status_id}", response_model=None, status_code=status.HTTP_204_NO_CONTENT)
+@router.delete("/rti_statuses/{rti_status_id}", response_model=None, status_code=status.HTTP_204_NO_CONTENT)
 def delete_rti_status_endpoint(
     rti_status_id: Annotated[UUID, Path(title="ID of the RTI status")],
     service: RTIStatusService = Depends(get_rti_status_service),
